--- a/templates/agregar_usuario.html
+++ b/templates/agregar_usuario.html
@@ -68,7 +68,7 @@
                 <select id="role" name="role" class="form-select" required>
                     <option value="Administrador">Administrador</option>
                     <option value="Cajero">Cajero</option>
-                    <option value="Cliente">Cliente</option>
+                    <!-- <option value="Cliente">Cliente</option> -->
                 </select>
                 </div>
                 <button type="submit" class="btn btn-primary">Registrar</button>
