--- a/templates/panelCajero.html
+++ b/templates/panelCajero.html
@@ -36,7 +36,6 @@
 {% block body %}
 <div class="container my-5 mx-auto">
   <div class="row justify-content-evenly">
-
     <div class="card" style="width: 18rem;">
       <img src="{{url_for('static', filename='images/vender.png')}}" class="card-img-top mx-1">
       <br>
@@ -47,7 +46,7 @@
         <a href="/vender" class="btn btn-primary">Ir a venta</a>
       </div>
     </div>
-
+  </div>
 </div>
 {% endblock %}
 
