Añado Modificar Usuario

--- a/templates/agregar_usuario.html
+++ b/templates/agregar_usuario.html
@@ -19,7 +19,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto"> <!-- Alinea el contenido a la derecha -->
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/admin">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="/gestion_usuario">Regresar</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/logout">Cerrar Sesión</a>
