--- a/templates/eliminar_usuario.html
+++ b/templates/eliminar_usuario.html
@@ -19,7 +19,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto"> <!-- Alinea el contenido a la derecha -->
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/admin_dashboard">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="/admin">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/logout">Cerrar Sesión</a>
@@ -36,21 +36,32 @@
         <div class="rounded p-4 bg-light">
             <div class="container my-5">
                 <h2 class="mb-4 text-center">Eliminar Usuario</h2>
-                {% if usuario_eliminado %}
-                <div class="alert alert-success" role="alert">
-                    El usuario ha sido eliminado exitosamente.
+                <!-- Mostrar mensajes flash -->
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                <div class="alert alert-dismissible {% for category, _ in messages %}alert-{{ category }} {% endfor %}">
+                    {% for category, message in messages %}
+                    <!-- <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close"></button> -->
+                    <strong>{{ message }}</strong>
+                    {% endfor %}
                 </div>
                 {% endif %}
+                {% endwith %}
+                <!-- Fin de mensajes flash -->
                 <div class="row justify-content-center">
                     <div class="col-md-6">
                         <form method="POST">
-                            {{ form.hidden_tag() }}
-                            <div class="mb-3">
-                                <label for="username" class="form-label">Selecciona el usuario a eliminar:</label>
-                                {{ form.username(class="form-select") }}
-                            </div>
+                          <div class="mb-3">
+                            <label for="usuario" class="form-label">Seleccionar Usuario</label>
+                            <select id="usuario" class="form-select" name="username">
+                              <!-- Aquí se insertarán las opciones para seleccionar al usuario -->
+                              {% for usuario in usuarios %}
+                                <option value="{{ usuario[0] }}">{{ usuario[1] }} ({{ usuario[3] }})</option>
+                              {% endfor %}
+                            </select>
+                          </div>
                             <button type="submit" class="btn btn-danger">Eliminar</button>
-                            <a href="{{ url_for('gestion_usuarios') }}" class="btn btn-primary">Regresar</a>
+                            <a href="/gestion_usuario" class="btn btn-primary">Regresar</a>
                         </form>
                     </div>
                 </div>
