Doy formato a los archivos .html

--- a/templates/cobrar.html
+++ b/templates/cobrar.html
@@ -4,9 +4,9 @@
 
 {% block nav %}
 
-    <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/vender">Regresar</a>
-    </li>
+<li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="/vender">Regresar</a>
+</li>
 
 {% endblock %}
 
@@ -67,7 +67,8 @@
                 <div class="form-group" id="efectivo">
                     <label for="monto">Monto recibido:</label>
                     <div class="input-group">
-                        <input type="number" class="form-control" name="monto_recibido" id="monto_recibido" step="0.01" min="{{total}}" required>
+                        <input type="number" class="form-control" name="monto_recibido" id="monto_recibido" step="0.01"
+                            min="{{total}}" required>
                         <div class="input-group-append">
                             <button class="btn btn-primary" type="submit">Calcular cambio</button>
                         </div>
@@ -87,7 +88,7 @@
             </div>
         </form>
     </div>
-    
+
 </div>
 
 <!-- Agrega tus scripts JavaScript -->
