--- a/templates/agregar_producto.html
+++ b/templates/agregar_producto.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
+DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
     <!-- Enlaces a los archivos CSS de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
 
 <!-- Navbar de Bootstrap -->
@@ -21,7 +19,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto"> <!-- Alinea el contenido a la derecha -->
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/admin">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="/admin_dashboard">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/logout">Cerrar Sesión</a>
@@ -31,15 +29,15 @@
   </div>
 </nav>
 
-<!-- Contenido de la página -->
+<!-- Contenido de tu página -->
 {% block content %}
 <!-- Título de la página -->
 <div class="row justify-content-center mt-5">
     <div class="col-md-6">
-        <h2 class="text-center mb-4">Registrar un Nuevo Usuario</h2>
+        <h2 class="text-center mb-4">Registrar un Nuevo Producto</h2>
     </div>
 </div>
-<!-- Formulario de registro de usuario -->
+<!-- Formulario de registro de producto -->
 <div class="row justify-content-center">
     <div class="col-md-6">
         <div class="rounded p-4 bg-light">
@@ -48,7 +46,7 @@
             {% if messages %}
             <div class="alert alert-dismissible {% for category, _ in messages %}alert-{{ category }} {% endfor %}">
                 {% for category, message in messages %}
-                <!--<button type="button" class="btn-close" data-dismiss="alert" aria-label="Close"></button> -->
+                <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close"></button>
                 <strong>{{ message }}</strong>
                 {% endfor %}
             </div>
@@ -57,33 +55,32 @@
             <!-- Fin de mensajes flash -->
             <form method="POST">
                 <div class="mb-3">
-                <label for="username" class="form-label">Nombre de usuario:</label>
-                <input type="text" id="username" name="username" class="form-control" required>
+                <label for="nombre" class="form-label">Nombre del Producto:</label>
+                <input type="text" id="nombre" name="nombre" class="form-control" required>
                 </div>
                 <div class="mb-3">
-                <label for="password" class="form-label">Contraseña:</label>
-                <input type="password" id="password" name="password" class="form-control" required>
+                <label for="id" class="form-label">Código de Barras:</label>
+                <input type="text" id="id" name="id" class="form-control" required>
                 </div>
                 <div class="mb-3">
-                <label for="role" class="form-label">Rol:</label>
-                <select id="role" name="role" class="form-select" required>
-                    <option value="Administrador">Administrador</option>
-                    <option value="Almacenista">Almacenista</option>
-                    <option value="Cajero">Cajero</option>
-                    <!-- <option value="Cliente">Cliente</option> -->
-                </select>
+                <label for="cantidad_disponible" class="form-label">Cantidad Disponible:</label>
+                <input type="text" id="cantidad_disponible" name="cantidad_disponible" class="form-control" required>
                 </div>
-                <button type="submit" class="btn btn-primary">Registrar</button>
-                <a href="{{ url_for('gestion_usuario') }}" class="btn btn-primary">Regresar</a>
+                <div class="mb-3">
+                <label for="precio" class="form-label">Precio:</label>
+                <input type="text" id="precio" name="precio" class="form-control" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Agregar producto</button>
+                <a href="{{ url_for('gestion_productos') }}" class="btn btn-primary">Regresar</a>
             </form>
         </div>
     </div>
 </div>
+
 {% endblock %}
 
 
 <!-- Enlaces a los archivos JS de Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
