--- a/templates/eliminar_usuario.html
+++ b/templates/eliminar_usuario.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eliminar Usuario - Otzo</title>
-  <!-- Enlaces a los archivos CSS de Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eliminar Usuario - Otzo</title>
+    <!-- Enlaces a los archivos CSS de Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
 
-  <!-- Navbar de Bootstrap -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Otzo</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto"> <!-- Alinea el contenido a la derecha -->
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/admin">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/logout">Cerrar Sesión</a>
-          </li>
-        </ul>
-      </div>
+<!-- Navbar de Bootstrap -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Otzo</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto"> <!-- Alinea el contenido a la derecha -->
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/admin">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Cerrar Sesión</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <!-- Contenido de tu página -->
   {% block content %}
@@ -57,7 +54,7 @@
                 <div class="mb-3">
                   <label for="usuario" class="form-label">Seleccionar Usuario</label>
                   <select id="usuario" class="form-select" name="username">
-                    <!-- Aquí se insertarán las opciones para seleccionar al usuario -->
+                    <!-- Aquí se insertarán las opciones para seleccionar el producto-->
                     {% for usuario in usuarios %}
                     <option value="{{ usuario[0] }}">{{ usuario[1] }} ({{ usuario[3] }})</option>
                     {% endfor %}
@@ -75,8 +72,7 @@
 
   {% endblock %}
 
-  <!-- Enlaces a los archivos JS de Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Enlaces a los archivos JS de Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
