--- a/templates/panelAlmacen.html
+++ b/templates/panelAlmacen.html
@@ -32,27 +32,24 @@
 <!-- Contenido de la página -->
 {% block body %}
 <div class="container my-5 mx-auto">
-  <div class="row justify-content-evenly">
+    <div class="row justify-content-evenly">
 
-    <div class="card" style="width: 18rem;">
-      <img src="{{url_for('static', filename='images/Gestion de Usuario.png')}}" class="card-img-top mx-1">
-      <br>
-      <div class="card-body">
-        <h3 class="card-title fw-bold">Gestión de Usuarios</h3>
-        <p class="card-text text-muted">Registrar, editar o eliminar usuarios.</p>
-        <br>
-        <div class="text-center">
-          <a href="/gestion_usuario" class="btn btn-primary">Ir a gestión de usuarios</a>
-        </div>
-      </div>
-    </div> 
-    
+        <div class="card" style="width: 18rem;">
+            <img src="{{url_for('static', filename='images/Gestion de productos.png')}}" class="card-img-top">
+            <br>
+            <div class="card-body">
+              <h3 class="card-title fw-bold">Gestión de Productos</h3>
+              <p class="card-text text-muted">Administrar productos y realizar cambios en el inventario.</p>
+              <div class="text-center">
+                <a href="/gestion_productos" class="btn btn-primary">Ir a gestión de productos</a>
+                </div>
+              </div>
+           </div>  
+          
 </div>
 {% endblock %}
 
 <!-- Enlaces a los archivos JS de Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
-
