--- a/templates/gestion_productos.html
+++ b/templates/gestion_productos.html
@@ -19,7 +19,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto"> <!-- Alinea el contenido a la derecha -->
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/admin"> Regresar al Inicio</a>
+          <a class="nav-link active" aria-current="page" href="/almacenista"> Regresar al Inicio</a>
         </li> 
         <li class="nav-item">
           <a class="nav-link" href="/logout">Cerrar Sesión</a>
@@ -64,9 +64,43 @@
   </div>
 </div>
 
+<div class="row mt-4" id="productTableContainer">
+  <div class="col-md-12">
+    <div class="card fadeIn">
+      <div class="card-body">
+        <h5 class="card-title">Productos Registrados</h5>
+        <div class="table-responsive">
+          <table id="userTable" class="table table-bordered table-sm">
+            <thead>
+              <tr>
+                <th>Codigo de Barras</th>
+                <th>Nombre</th>
+                <th>Precio</th>
+                <th>Existencia</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- Aquí se insertarán las filas de la tabla con los datos de los usuarios -->
+              {% for producto in productos %}
+              <tr>
+                <td>{{ producto[0] }}</td>
+                <td>{{ producto[1] }}</td>
+                <td>{{ producto[2] }}</td>
+                <td>{{ producto[3] }}</td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- Enlaces a los archivos JS de Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
   
+
