Actualizar header de eliminar productos

--- a/templates/eliminar_producto.html
+++ b/templates/eliminar_producto.html
@@ -18,9 +18,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto"> <!-- Alinea el contenido a la derecha -->
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/admin">Inicio</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="/logout">Cerrar Sesión</a>
         </li>
